update image upload ui
