# packages/server/src/storage/storage.controller.ts
@@ -1,28 +1,22 @@
 import {
   Controller,
-  Delete,
-  Param,
   Post,
   UploadedFile,
   UseInterceptors,
 } from '@nestjs/common';
 import { StorageService } from './storage.service';
 import { FileInterceptor } from '@nestjs/platform-express';
+import { BufferedFile } from './type';
+import { ApiOkResponse } from '@nestjs/swagger';
 
 @Controller('storage')
 export class StorageController {
   constructor(private service: StorageService) {}
 
   @Post()
+  @ApiOkResponse({ type: String })
   @UseInterceptors(FileInterceptor('file'))
-  async getFile(@UploadedFile() file: any): Promise<string> {
-    console.log(file);
-    return 'create....';
-  }
-
-  @Delete('/:fileName')
-  async deleteFile(@Param('fileName') fileName: string): Promise<string> {
-    console.log(fileName);
-    return 'delete...';
+  async createImage(@UploadedFile() file: BufferedFile): Promise<string> {
+    return this.service.upload(file);
   }
 }
